<resources>
    //Name
    <string name="app_name">Escolta\'m</string>

    //SignUp UI
    <string name="txtButtonSignUpUI">Registrar</string>
    <string name="textInfoAlreadyAccountSignUpUI">Ja tens un compte? </string>
    <string name="textInfoLoginSignUpUI">Torna al login</string>
    <string name="textRadioButtonFemaleSignUpUI">Femenina</string>
    <string name="textRadioButtonMaleSignUpUI">Masculina</string>

    //Login UI
    <string name="textInfoSignUpLoginUI">dona\'t d\'alta</string>
    <string name="campEmailBuitLogin">Introdueix l\'email</string>
    <string name="campClauBuitLogin">Introdueix la clau</string>
    <string name="titleLoginUI">Escolta\'m</string>
    <string name="textForgotPasswordLoginUI">Has oblidat la teva clau?</string>
    <string name="textEntrarButtonLoginUI">Entrar</string>
    <string name="textInfoNewUserLoginUI">Ets nou usuari? Si és així,</string>

    //Forgot Password UI
    <string name="textButtonForgotPasswordUI">Recuperar</string>
    <string name="textInfoForgotPasswordUI">Introdueix el teu email i recupera la clau</string>
    <string name="textTornarForgotPasswordUI">Tornar al login</string>

    //Administrator UI
    <string name="titleAdministratorUI">Administrador</string>
    <string name="textLogoutButtonAdministrator">Logout</string>

    //Client UI
    <string name="titleUiClient">Client</string>
    <string name="textLogoutButtonClient">Logout</string>

    //Main UI
    <string name="titleMainUI">Escolta\'m</string>
    <string name="confClauEditTextHint">Confirmar clau</string>

    //Server Test UI
    <string name="textButtonServerTestUI">Test</string>

    //RequestTest UI
    <string name="tornar_al_login">Tornar al login</string>

    //Settings UI
    <string name="description_canvi_de_clau">Canvi de clau</string>
    <string name="description_canvi_de_veu">Canvi de veu</string>
    <string name="text_canviar_clau_settings">\tCanviar clau </string>
    <string name="text_canviar_veu_settings">\tCanviar veu </string>

    //Fragment change voice UI
    <string name="hint_acceptar_change_voice">Acceptar</string>
    <string name="hint_clau_change_voice">Clau</string>

    //Fragment change password UI
    <string name="hint_clau_actual_change_password">Clau actual</string>
    <string name="hint_clau_nova_change_password">Clau nova</string>
    <string name="hint_repetir_clau_nova_change_password">Repetir clau nova</string>
    <string name="hint_acceptar_change_password">Acceptar</string>

    //Generals UI
    <string name="emailEditTextHint">Email</string>
    <string name="clauEditTextHint">Clau</string>

    //Altres
    <string name="errorServidor">Problemes amb el servidor</string>
    <string name="errorEmailPassword">Email o clau incorrecta</string>
    <string name="errorUserSignUp">No s\'ha pogut dur a terme el registre.</string>
    <string name="menu_title_logout">Logout</string>
    <string name="menu_title_comunicador">Comunicador</string>
    <string name="menu_title_configuracio">Configuració</string>
    <string name="menu_title_administracio">Administració</string>

    //Fragments views description.
    <string name="user_second_background_description">user second background</string>
    <string name="user_first_background_description">user first background</string>
    <string name="user_add_page_description">user add page</string>
    <string name="user_control_icons_description">user control icons description</string>
    <string name="user_control_stop_description">user control stop description</string>
    <string name="user_control_play_description">user control play description</string>
    <string name="user_toolbar_delete_all_description">user toolbar delete all description</string>
    <string name="user_toolbar_settings_description">user toolbar settings description</string>
    <string name="user_toolbar_delete_description">user toolbar delete description</string>
    <string name="user_toolbar_translate_description">user toolbar translate description</string>
    <string name="user_toolbar_add_icon_description">user toolbar add icon description</string>
    <string name="user_toolbar_forward_description">user toolbar forward description</string>
    <string name="user_toolbar_edtittext_description">user toolbar edtittext description</string>

    //Spinners
    <string-array name="search_options">
        <item>Tot</item>
        <item>Email</item>
        <item>Veu</item>
        <item>Rol</item>
    </string-array>

    <string-array name="request_options">
        <item>Login</item>
        <item>Nou usuari</item>
        <item>Canviar clau</item>
        <item>Canviar veu</item>
        <item>Cerca per tot</item>
        <item>Cerca per email</item>
        <item>Cerca per veu</item>
        <item>Cerca per rol</item>
    </string-array>

    <string-array name="icons_files_options_portrait">
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>

    <string-array name="icons_files_options_landscape">
        <item>3</item>
        <item>5</item>
        <item>8</item>
        <item>10</item>
        <item>12</item>
        <item>15</item>
    </string-array>

    //Selectable
    <string-array name="autocomplete_voice_options">
        <item>FEMALE</item>
        <item>MALE</item>
    </string-array>

    <string-array name="autocomplete_role_options">
        <item>ROLE_ADMIN</item>
        <item>ROLE_USER</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="context_panell_edit_text">Editar</string>
    <string name="context_panell_delete_text">Eliminar</string>
    <string name="dialog_panell_title_hint">Títol del panell</string>
    <string name="dialog_panell_spinner_text">Icones per fila</string>
    <string name="dialog_icona_hint_editext">Text de la icona</string>
    <string name="dialog_icona_select_image_button_text">Seleccionar imatge</string>
    <string name="context_icona_edit_text">Editar</string>
    <string name="context_icona_delete_text">Eliminar</string>
    <string name="context_panell_icon_size_text">Icones per fila</string>
    <string name="panell_row_size_two">2</string>
    <string name="panell_row_size_three">3</string>
    <string name="panell_row_size_four">4</string>
    <string name="panell_row_size_five">5</string>
    <string name="context_translator_enable_text">Activar</string>
    <string name="context_translator_disable_text">Desactivar</string>
    <string name="panell_options_button_content_escription">Panell options boto</string>
    <string name="panell_favorite_button_content_escription">Panell favorit boto</string>
    <string name="viewpager_content_escription">ViewPager</string>
    <string name="context_panell_favorite_text">Fer favorit</string>
    <string name="text_eliminar_compte_settings">Eliminar compte</string>
    <string name="panells_transition_text">Carregant panells</string>
    <string name="add_panell_test_text">Afegir panell</string>
    <string name="edit_panell_test_text">Editar panell</string>
    <string name="delete_panell_test_text">Eliminar panell</string>
    <string name="add_icona_test_text">Afegir icona</string>
    <string name="edit_icona_test_text">Editar icona</string>
    <string name="delete_icona_test_text">Eliminar icona</string>
    <string name="delete_account_test_text">Eliminar compte</string>
    <string name="get_panells_test_text">Obtenir panells</string>

</resources>