<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context="controlador.activity.UserSettingsActivity">

    <FrameLayout
        android:id="@+id/user_settings_fragment_container"
        android:name="FavoritesFragmentContainer"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/settings_bg_frame"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnChangePasswordUser">

    </FrameLayout>

    <Button
        android:id="@+id/btnChangePasswordUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/text_canviar_clau_settings"
        android:paddingStart="0dp"
        android:paddingEnd="10dp"
        android:textAlignment="center"
        android:background="@drawable/principal_button_settings_top_round"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/description_canvi_de_clau" />

    <Button
        android:id="@+id/btnChangeVoiceUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_canviar_veu_settings"
        android:paddingStart="0dp"
        android:paddingEnd="10dp"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/btnChangePasswordUser"
        app:layout_constraintStart_toEndOf="@+id/btnChangePasswordUser"
        app:layout_constraintTop_toTopOf="@+id/btnChangePasswordUser"
        android:background="@drawable/button_middle_top_round"
        android:contentDescription="@string/description_canvi_de_veu" />

</androidx.constraintlayout.widget.ConstraintLayout>