<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="test.ServerTestsActivity">


    <Button
        android:id="@+id/buttonTest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/textButtonServerTestUI"
        app:layout_constraintBottom_toBottomOf="@+id/clauTest"
        app:layout_constraintEnd_toEndOf="@+id/emailTest"
        app:layout_constraintTop_toBottomOf="@+id/emailTest" />

    <TextView
        android:id="@+id/textResponse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:textColor="@color/black"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/clauTest" />

    <EditText
        android:id="@+id/clauTest"
        android:layout_width="213dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:autofillHints="password"
        android:background="@drawable/bg_edittext"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/clauEditTextHint"
        android:inputType="none"
        android:minHeight="48dp"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="10dp"
        android:textColor="@color/black"
        android:textColorHint="@color/darkerGray"
        app:layout_constraintEnd_toStartOf="@+id/buttonTest"
        app:layout_constraintStart_toStartOf="@+id/emailTest"
        app:layout_constraintTop_toBottomOf="@+id/emailTest" />

    <EditText
        android:id="@+id/emailTest"
        android:layout_width="301dp"
        android:layout_height="48dp"
        android:autofillHints="emailAddress"
        android:background="@drawable/bg_edittext"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/emailEditTextHint"
        android:inputType="none"
        android:minHeight="48dp"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="10dp"
        android:textColor="@color/black"
        android:textColorHint="@color/darkerGray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.222"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.248" />
</androidx.constraintlayout.widget.ConstraintLayout>