<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context="controlador.server.test.activity.RequestTestActivity">

    <RelativeLayout
        android:id="@+id/spinner_layout"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_weight=".28"
        android:background="@drawable/spinner_bg"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.17000002">

        <Spinner
            android:id="@+id/spinnerRequest"
            android:layout_width="300dp"
            android:layout_height="48dp"
            android:layout_centerVertical="true"
            android:layout_gravity="center"
            android:layout_marginTop="176dp"
            android:backgroundTint="@color/colorPrimaryDark"
            android:gravity="end"
            android:paddingEnd="30dp"
            android:spinnerMode="dropdown"

            tools:ignore="SpeakableTextPresentCheck" />

    </RelativeLayout>

    <EditText
        android:id="@+id/infoTest"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginTop="8dp"
        android:autofillHints="password"
        android:background="@drawable/bg_edittext"
        android:drawablePadding="10dp"
        android:ems="10"
        android:inputType="none"
        android:minHeight="48dp"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="10dp"
        android:textColor="@color/black"
        android:textColorHint="@color/darkerGray"
        app:layout_constraintEnd_toEndOf="@+id/spinner_layout"
        app:layout_constraintStart_toStartOf="@+id/spinner_layout"
        app:layout_constraintTop_toBottomOf="@+id/spinner_layout"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/emailTest"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginTop="8dp"
        android:autofillHints="password"
        android:background="@drawable/bg_edittext"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/emailEditTextHint"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="10dp"
        android:textColor="@color/black"
        android:textColorHint="@color/darkerGray"
        app:layout_constraintEnd_toEndOf="@+id/infoTest"
        app:layout_constraintStart_toStartOf="@+id/infoTest"
        app:layout_constraintTop_toBottomOf="@+id/infoTest"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/buttonRequestTest"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:text="@string/textButtonServerTestUI"
        app:layout_constraintEnd_toStartOf="@+id/buttonClearTest"
        app:layout_constraintStart_toStartOf="@+id/emailTest"
        app:layout_constraintTop_toBottomOf="@+id/emailTest" />

    <Button
        android:id="@+id/buttonClearTest"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:text="X"
        app:layout_constraintEnd_toEndOf="@+id/emailTest"
        app:layout_constraintTop_toBottomOf="@+id/emailTest" />

    <TextView
        android:id="@+id/textRequestResponse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:textColor="@color/black"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonRequestTest" />

    <TextView
        android:id="@+id/textReturnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="36dp"
        android:clickable="true"
        android:focusable="true"
        android:minHeight="48dp"
        android:text="@string/tornar_al_login"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/emailTest" />

    <Button
        android:id="@+id/btnAfegirPanellTest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:text="Afegir panell"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonRequestTest" />

    <Button
        android:id="@+id/btnEditarPanellTest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:text="Editar panell"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnAfegirPanellTest" />

    <Button
        android:id="@+id/btnEliminarPanellTest"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:text="Eliminar panell"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnEditarPanellTest" />

    <Button
        android:id="@+id/btnAfegirIconaTest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:text="Afegir icona"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonRequestTest" />

    <Button
        android:id="@+id/btnEditarIconaTest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:text="Editar icona"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnAfegirIconaTest" />

    <Button
        android:id="@+id/btnEliminarIconaTest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:text="Eliminar icona"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnEditarIconaTest" />

    <Button
        android:id="@+id/btnDeleteAccountTest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:text="Eliminar compte"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnEliminarIconaTest" />

    <Button
        android:id="@+id/btnObtenirPanellsTest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:text="Obtenir panells"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnEliminarPanellTest" />


</androidx.constraintlayout.widget.ConstraintLayout>